removed some Sonar violations